change the standard code and added the sort fucntion for the arraylist